export class BidValidationStrategy {
  /**
   * @param {{auction: any, highestBid: any, bidder: any, bidAmount: any, now: Date}} input
   * @returns {void} throws Error if invalid
   */
  // eslint-disable-next-line no-unused-vars
  validate(input) {
    throw new Error('Not implemented');
  }
}

