@startuml DetailedClassDiagrams
!theme plain

' ==================== 1. FACADE PATTERN ====================

package "Facades" {
    interface IAuctionFacade {
        +createAuction(ownerId, payload): Auction
        +getAuctionById(id): Auction
        +getAllAuctionsForOwner(ownerId): Auction[]
        +updateAuction(id, ownerId, payload): Auction
        +deleteAuction(id, ownerId): void
        +placeBid(bidderId, payload): Bid
        +getAuctionStats(auctionId): Object
        +getBidHistory(bidderId): Bid[]
    }

    interface IWalletFacade {
        +createTransaction(userId, payload): Transaction
        +getUserTransactions(userId): Transaction[]
        +getUserBalance(userId): Number
        +deposit(userId, amount): Transaction
        +withdraw(userId, amount): Transaction
    }

    class AuctionFacade {
        -auctionRepository: AuctionRepository
        -bidRepository: BidRepository
        -userRepository: UserRepository
        -bidValidation: StandardBidValidation
        +createAuction(ownerId, payload): Auction
        +getAuctionById(id): Auction
        +getAllAuctionsForOwner(ownerId): Auction[]
        +updateAuction(id, ownerId, payload): Auction
        +deleteAuction(id, ownerId): void
        +placeBid(bidderId, payload): Bid
        +getAuctionStats(auctionId): Object
        +getBidHistory(bidderId): Bid[]
    }

    class WalletFacade {
        -transactionRepository: TransactionRepository
        -userRepository: UserRepository
        +createTransaction(userId, payload): Transaction
        +getUserTransactions(userId): Transaction[]
        +getUserBalance(userId): Number
        +deposit(userId, amount): Transaction
        +withdraw(userId, amount): Transaction
    }

    IAuctionFacade <|.. AuctionFacade
    IWalletFacade <|.. WalletFacade
}

' ==================== 2. DOMAIN - STATE PATTERN ====================

package "Domain - Auction State" {
    abstract class AuctionState {
        +canPlaceBid(auction, now): boolean
        +canEditAuction(auction, ownerId): boolean
        +canDeleteAuction(auction, ownerId): boolean
        +canCancelAuction(auction, ownerId): boolean
    }

    class ActiveState {
        +canPlaceBid(auction, now): boolean
        +canEditAuction(auction, ownerId): boolean
        +canDeleteAuction(auction, ownerId): boolean
    }

    class EndedState {
        +canPlaceBid(auction, now): boolean
        +canEditAuction(auction, ownerId): boolean
    }

    class UpcomingState {
        +canPlaceBid(auction, now): boolean
        +canEditAuction(auction, ownerId): boolean
    }

    class AuctionStateFactory {
        +fromAuction(auction, now?): AuctionState
    }

    AuctionState <|-- ActiveState
    AuctionState <|-- EndedState
    AuctionState <|-- UpcomingState
    AuctionStateFactory --> AuctionState
}

' ==================== 3. DOMAIN - STRATEGY PATTERN ====================

package "Domain - Bidding Strategy" {
    interface BidValidationStrategy {
        +validate(context: BidValidationContext): void
    }

    class StandardBidValidation {
        +validate(context: BidValidationContext): void
    }

    class BidValidationContext {
        +auction: Auction
        +highestBid: Bid
        +bidder: User
        +bidAmount: Number
        +now: Date
    }

    BidValidationStrategy <|.. StandardBidValidation
    StandardBidValidation --> BidValidationContext
}

' ==================== 4. MODELS ====================

package "Models" {
    class User {
        +id: Integer
        +email: String
        +userName: String
        +password: String
        +fullName: String
        +phone: String
        +avatar: String
        +walletBalance: Decimal
        +createdAt: Date
        +updatedAt: Date
    }

    class Auction {
        +id: Integer
        +ownerId: Integer
        +itemId: Integer
        +title: String
        +description: String
        +startTime: Date
        +endTime: Date
        +startingPrice: Decimal
        +currentPrice: Decimal
        +incrementPrice: Decimal
        +instantBuyPrice: Decimal
        +mandatoryDeposit: Decimal
        +auctionStatus: Enum(PENDING, ACTIVE, ENDED, CANCELLED)
        +winnerId: Integer
        +createdAt: Date
        +updatedAt: Date
    }

    class Bid {
        +id: Integer
        +auctionId: Integer
        +bidderId: Integer
        +bidAmount: Decimal
        +isWon: Boolean
        +createdAt: Date
    }

    class Item {
        +id: Integer
        +ownerId: Integer
        +name: String
        +description: String
        +category: String
        +images: JSON
        +condition: String
        +createdAt: Date
    }

    class Transaction {
        +id: Integer
        +userId: Integer
        +type: Enum(DEPOSIT, WITHDRAW, BID_DEPOSIT, REFUND, PAYMENT)
        +amount: Decimal
        +status: Enum(PENDING, COMPLETED, FAILED)
        +referenceId: String
        +description: String
        +createdAt: Date
    }

    class Session {
        +id: Integer
        +userId: Integer
        +token: String
        +expiresAt: Date
        +createdAt: Date
    }

    User "1" --> "*" Auction : owns
    User "1" --> "*" Bid : places
    Auction "1" --> "*" Bid : has
    User "1" --> "*" Item : owns
    Auction "1" --> "1" Item : relates to
    User "1" --> "*" Transaction : has
}

' ==================== 5. REPOSITORIES ====================

package "Repositories" {
    class AuctionRepository {
        +create(data): Auction
        +findById(id): Auction
        +findAllByOwnerId(ownerId): Auction[]
        +findAllActive(): Auction[]
        +save(auction): Auction
        +destroy(auction): void
        +update(query, data): Integer
    }

    class BidRepository {
        +create(data): Bid
        +findById(id): Bid
        +findHighestByAuctionId(auctionId): Bid
        +findAllByAuctionId(auctionId): Bid[]
        +findAllByBidderId(bidderId): Bid[]
    }

    class UserRepository {
        +create(data): User
        +findById(id): User
        +findByEmail(email): User
        +save(user): User
    }

    class TransactionRepository {
        +create(data): Transaction
        +findByUserId(userId): Transaction[]
        +findById(id): Transaction
    }

    AuctionRepository --> Auction
    BidRepository --> Bid
    UserRepository --> User
    TransactionRepository --> Transaction
}

' ==================== 6. SERVICES ====================

package "Services" {
    class AuctionService {
        +createAuction(userId, data): Auction
        +getAllAuctions(userId): Auction[]
        +getAuctionById(id): Auction
        +updateAuction(id, userId, data): Auction
        +deleteAuction(id, userId): Auction
        +activatePendingAuctions(): Integer
        +closeExpiredAuctions(): Integer
    }

    class BidService {
        +createBid(userId, data): Bid
        +getBidsByAuction(auctionId): Bid[]
        +getUserBids(userId): Bid[]
    }

    class UserService {
        +register(data): User
        +login(email, password): User
        +getProfile(userId): User
        +updateProfile(userId, data): User
    }

    class TransactionService {
        +createTransaction(userId, data): Transaction
        +getUserTransactions(userId): Transaction[]
        +processDeposit(userId, amount): Transaction
        +processWithdraw(userId, amount): Transaction
    }

    AuctionService --> AuctionRepository
    BidService --> BidRepository
    UserService --> UserRepository
    TransactionService --> TransactionRepository
}

' ==================== 7. CONTROLLERS ====================

package "Controllers" {
    class AuctionController {
        +createAuction(req, res): void
        +getUserAuctions(req, res): void
        +getAuctionById(req, res): void
        +getAllAuctions(req, res): void
        +updateAuction(req, res): void
        +deleteAuction(req, res): void
    }

    class BidController {
        +placeBid(req, res): void
        +getAuctionBids(req, res): void
        +getUserBids(req, res): void
    }

    class UserController {
        +register(req, res): void
        +login(req, res): void
        +getProfile(req, res): void
        +updateProfile(req, res): void
    }

    class TransactionController {
        +createTransaction(req, res): void
        +getUserTransactions(req, res): void
        +deposit(req, res): void
        +withdraw(req, res): void
    }

    AuctionController --> IAuctionFacade
    BidController --> IAuctionFacade
    UserController --> IWalletFacade
    TransactionController --> IWalletFacade
}

@enduml
